--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>BPC india</title>
+  <title>BPC INDIA | Baroda Productivity Council</title>
 </head>
 
 <body class="new">
